--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
 
 /* ************** Landing Page ***************  */
 .my-name {
+    text-align: center;
     position: absolute;
     top: 36%;
     left: 33%;
@@ -24,11 +25,13 @@ body {
 }
 
 .subheading {
+    text-align: center;
     position: absolute;
-    top: 46%;
-    left: 35%;
+    top: 48%;
+    left: 40%;
     font-size: 40px;
     text-align: center;
+    color: #969696;
 }
 
 .enter {
@@ -37,14 +40,19 @@ body {
     left: 45%;
     font-size: 35px;
     width: 180px;
-    border: solid blue 1px;
-    background-color: white;
+    /* border: solid blue 1px; */
+    background-color: #969696;
+    color: white;
     text-decoration: none;
     text-align: center;
+    border-radius: 25px;
 }
 
 /* ***************** About Page *************** */
 
+.current-about {
+    border-bottom: #6d6d6d 1px solid;
+}
 header {
     /* background-color: yellow; */
     position: relative;
@@ -72,8 +80,8 @@ nav ul li {
     padding-left: 20px;
 }
 
-nav ul li:hover {
-    text-decoration: underline;
+nav ul li a:hover {
+    color: #dbdbdb;
 }
 
 .profile-img {
@@ -91,7 +99,6 @@ nav ul li:hover {
     font-size: 18px;
 }
 .skills {
-    background-color: yellow;
     width: 1000px;
     height: 250px;
     box-shadow: 2px 2px 6px rgba(155,155,155,.2);
@@ -141,4 +148,241 @@ a {
 
 .skills {
     color: white;
+}
+
+.fab:hover,
+.far:hover {
+   color: #dbdbdb;
+}
+
+/* *************** Projects **************** */
+
+.current-projects {
+    border-bottom: #6d6d6d 1px solid;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    width: 1100px;
+    height: 600px;
+}
+
+.pro-one, .pro-two {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    margin: 0 40px;
+}
+
+.pro-two {
+    margin-top: -50px;
+}
+
+.project {
+    width: 480px;
+    height: 250px;
+    box-shadow: 2px 2px 6px rgba(155,155,155,.2);
+    border-radius: 20px;
+    background-color: #C9C9C9;
+    margin-left: 20px;
+    flex: 1;
+    text-align: center;
+}
+
+.pro-title {
+    text-align: center;
+    padding: 5px 0;
+}
+
+.pro-info {
+    opacity: .001;
+    width: inherit;
+    height: inherit;
+    background-color: rgb(0,0,0, .001)
+}
+
+
+.pro-info:hover {
+    opacity: 1;
+}
+
+.pro-info h3 {
+    padding-top: 100px;
+}
+
+.fa-bars {
+    display: none;
+    margin-top: 5px;
+    margin-left: 100px;
+}
+
+.close { 
+    margin-top: 5px;
+    margin-left: 100px;
+    display: none;
+}
+/* ----------- Responsive  */
+
+
+/* iPad ---- */
+@media (max-width: 1204px){
+    .container {
+        width: 960px;
+        height: 1320px;
+        /* overflow: scroll; */
+    }
+    .projects {
+        display: flex;
+        flex-direction: column;
+        width: 1000px;
+        height: 1200px;
+        padding-left: 50px;
+    }
+    .project {
+        width: 800px;
+        height: 100px;
+        box-shadow: 2px 2px 6px rgba(155,155,155,.2);
+        border-radius: 20px;
+        background-color: #C9C9C9;
+        margin-top: 15px;
+        flex: 1;
+        text-align: center;
+    }
+    .pro-one, .pro-two {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        margin: 15px 20px;
+    }
+    .pro-two {
+        margin-top: -15px;
+    }
+    .pro-title {
+        margin-top: -15px;
+    }
+    .profile-img {
+        width: 300px;
+        height: 300px;
+        padding: 0 auto;
+        margin-top: 10px;
+        margin-left: 350px;
+   }
+   .name-about {
+       font-size: 56px;
+   }
+   .sub-about {
+    font-size: 30px;
+}
+   .about-nav,
+   .pro-nav {
+       font-size: 20px;
+       margin-left: -70px;
+   }
+}
+
+/* iPhone X ---- */
+
+@media (max-width: 375px){
+    * {
+        border: none;
+    }
+    .container {
+        width: 350px;
+        height: 812px;
+        overflow: scroll;
+        margin-left: -6px;
+    }
+    .projects {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        height: 800px;
+        padding-left: 50px;
+    }
+    header {
+        width: 320px;
+        margin-left: -45px;
+    }
+    .pro-nav {
+        display: none;
+        background-color: white;
+        box-shadow: 2px 2px 6px rgba(155,155,155,.2);
+        padding-bottom: 10px;
+    }
+    .about-nav {
+        display: none;
+        background-color: white;
+        box-shadow: 2px -2px 6px rgba(155,155,155,.2);
+        padding-bottom: 10px;
+    }
+    .close {
+       display: none;
+       text-align: center;
+       margin-top: -15px;
+   }
+   .fa-bars {
+    display: block;
+   }
+   .profile-img {
+        width: 300px;
+        height: 300px;
+        padding: 0 auto;
+        margin-top: 10px;
+        margin-left: 25px;
+   }
+   .info {
+       width: 300px;
+       height: 300px;
+       padding-bottom: 30px;
+   }
+   .project {
+       width: 300px;
+       margin-left: -45px;
+   }
+   .pro-info h3 {
+       margin-top: -20px;
+   }
+   .skills {
+       display: flex;
+       flex-direction: column;
+       width: 300px;
+       height: 380px;
+       margin-bottom: 20px;
+   }
+   .first {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        height: 150px;
+        margin-bottom: 50px;
+   }
+   .second {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        height: 150px;
+    }
+    .html,
+    .css,
+    .react,
+    .ruby {
+        border: none;
+        padding: none;
+    }
+    .html {
+        margin-top: -50px;
+    }
+    .react {
+        margin-top: -100px;
+    }
+    .one,
+    .two {
+        padding-top: 20px; 
+    }
+    .javascript {
+        padding-bottom: -50px;
+    }
 }
