--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,25 @@ a {
 
 /* *************** Projects **************** */
 
+.han {
+    background: url('../images/han.png');
+    background-size: cover;
+}
+
+.spot {
+    background: url('../images/spot.png');
+    background-size: cover;
+}
+
+.socialite {
+    background: url('../images/socialite.png');
+    background-size: cover;
+}
+
+.pixle {
+    background: url('../images/Pixle.png');
+    background-size: cover;
+}
 .current-projects {
     border-bottom: #6d6d6d 1px solid;
 }
@@ -200,15 +219,22 @@ a {
     width: inherit;
     height: inherit;
     background-color: rgb(0,0,0, .001)
+    border-radius: 25px;
 }
 
 
 .pro-info:hover {
-    opacity: 1;
+    opacity: .95;
+    background-color: white;
+    color: black;
+    border-radius: 25px;
+}
+.pro-info h3 {
+    padding-top: 80px;
 }
 
-.pro-info h3 {
-    padding-top: 100px;
+.pro-info p {
+    width: 400px;
 }
 
 .fa-bars {
@@ -221,6 +247,14 @@ a {
     margin-top: 5px;
     margin-left: 100px;
     display: none;
+}
+
+button {
+    width: 80px;
+    height: 40px;
+    background-color: black;
+    color: white;
+    opacity: 1;
 }
 /* ----------- Responsive  */
 
